style.css
:root {
    --theme-color: #7510F7;
    --background-color: #f7f7f7;
    --text-dark-color: #333;
}

html {
    scroll-behavior: smooth;
  }

body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lato', sans-serif;
    
}

.page-wrapper {
    max-width: 1400px;
    margin-right: auto;
    margin-left: auto;
    background-color: var(--background-color);
}

/* header styles */

header {
    position: relative;
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    padding: 20px 12px 100px 40px;
    /* text-align: center; */
    background-color: var(--theme-color);
    color: white;
    height: 50vh;
   
}

header p {
    font-size: 20px;
    margin-bottom: 20px;
}

.welcom-txt__second-txt {
    margin-bottom: 50px;
}

.header-img-container {
    position: absolute;
    width: 50%;
    margin-top: 50px;
    left: 50%;
    bottom: 0;
    transform: translate(-50%, 50%);
}

.header-img-container img {
    width: 100%;
   border-radius: 50%;
}

header .projects-link {
    text-decoration: none;
    text-transform: uppercase;
    border: 2px solid white;
    border-radius: 9999px;
    color: white;
    padding: 10px 20px;
    transition: linear .2s;
}

header .projects-link:hover {
    background-color: white;
    color: var(--theme-color);
}


@media (min-width: 600px) {
    header {
        flex-direction: row;
        justify-content: space-between;
        height: auto;
        padding-left: 40px;
        padding-right: 40px;
    }

    header .welcom-txt {
        width: 40%;
    }

    .header-img-container {
        position: static;
        width: 30%;
        transform: translate(0, 0);
    }

    @media(min-width: 1000px) {
        header {
            min-height: 25vh;
            padding-top: 100px;
        }
        .header-img-container {
            margin-top: 0;
        }
    }

    @media(min-width: 1200px) {
        .header-img-container {
            width: 15%;
        }
    }
}


/* about me section */

.about-me {
    padding: 100px 30px 150px 30px;
    color: var(--text-dark-color);
}

.about-me p {
    font-weight: 700;
    line-height: 1.5;
}

.about-me h2 {
    margin-bottom: 40px;
}

.about-me .img-wrapper {
    width: 80%;
}

.about-me .img-wrapper img {
    width: 100%;
}

@media(min-width: 600px) {
    .about-me {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        padding-top: 150px;
        padding-left: 40px;
        padding-right: 40px;
    }
    .about-me h2 {
        width: 100%;
    }
    .about-me .img-wrapper {
        width: 45%;
    }
    .about-me__text-container {
        width: 50%;
    }
}

@media(min-width: 1000px) {
    .about-me .img-wrapper {
        width: 30%;
    }
}

/* my skills */

.my-skills {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
    padding: 80px 30px 80px 30px;
    background-color: var(--theme-color);
}

.my-skills h2 {
    margin-bottom: 40px;
    display: block;
    width: 100%;
    color: white;
}

.my-skills .icon-container {
    display: flex;
    flex-direction: column;
    width: 15%;
    padding: 10px 20px;
    background-color: white;
    text-align: center;
    color: var(--text-dark-color);
    border-radius: 8px;
    box-shadow: 0px 11px 10px -2px rgba(0,0,0,0.75);
    -webkit-box-shadow: 0px 11px 30px -13px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 11px 30px -13px rgba(0,0,0,0.75);
}

.my-skills img {
    flex-grow: 1;
}

.my-skills .icon-container span {
    display: block;
    margin-top: 5px;
    font-size: 15px;
}

@media(min-width: 500px) {
    .my-skills .icon-container {
        width: 10%;
    }
}

@media(min-width: 600px) {
    .my-skills  {
        padding-left: 40px;
        padding-right: 40px;
    }
}

@media(min-width: 1000px) {
    .my-skills .icon-container {
        width: 5%;
    }
    .my-skills {
        padding-bottom: 150px;
    }
}

/* projects */

.projects {
    padding: 80px 15px;
    color: var(--text-dark-color);
}

.projects__project-container {
    background-color: white;
    padding: 80px 15px;
    border-radius: 8px;
    margin-bottom: 100px;
}

.projects h2 {
    margin-bottom: 50px;
}

.projects p {
    line-height: 1.2;
}

.projects a {
    text-decoration: none;
    color: var(--theme-color);
}

.projects__links {
    margin-top: 30px;
}

.projects__links a {
    border: 2px solid var(--theme-color);
    padding: 5px 30px;
    border-radius: 9999px;
    margin-right: 10px;
    transition: linear .2s;
}

.projects__links a:hover {
    background-color: var(--theme-color);
    color: white;
}

.projects__text-container {
    opacity: 0;
    transition: linear .5s;
}

.projects__text-container.active {
    opacity: 1;
}

.projects__img-container {
    opacity: 0;
    width: 100%;
    margin-bottom: 50px;
    transition: linear .5s;
}

.projects__img-container.active {
    opacity: 1;
}

.projects__img-container img {
    width: 100%;
    box-shadow: 0px 7px 10px 0px rgba(0,0,0,0.5);
-webkit-box-shadow: 0px 7px 10px 0px rgba(0,0,0,0.5);
-moz-box-shadow: 0px 7px 10px 0px rgba(0,0,0,0.5);
}

@media(min-width: 600px) {
    .projects {
        padding-left: 40px;
        padding-right: 40px;
    }
}

@media(min-width: 700px) {
    .projects__project-container {
        display: flex;
        justify-content: space-around;
        padding-top: 100px;
    }

    .projects__project-container:nth-child(odd) {
        flex-direction: row-reverse;
    }

    .projects__text-container {
        width: 50%;
    }
    .projects__img-container {
        width: 35%;
    }
}

/* form styles */

form h2 {
    margin-bottom: 40px;
}

form {
    box-sizing: border-box;
    background-color: var(--theme-color);
    color: white;
    width: 100%;
    display: flex;
    flex-direction: column;
    padding: 50px 35px 100px 30px;
}

.form-wrapper {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

input {
    box-sizing: border-box;
    padding: 15px 20px;
    margin-bottom: 20px;
    border: white 2px solid;
    border-radius: 8px;
    width: 100%;
}

textarea {
    box-sizing: border-box;
    min-width: 100%;
    max-width: 100%;
    padding: 15px 20px;
    border-radius: 8px;
    min-height: 150px;
}

.btn-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
}

form button {
    width: 50%;
    margin-top: 30px;
    padding: 10px;
    color: white;
    background-color: var(--theme-color);
    border: 2px solid white;
    border-radius: 9999px;
}

form button:hover {
    background-color: white;
    color: var(--theme-color);
}

@media(min-width: 700px) {
    form h2 {
        padding-left: 20px;
        margin-bottom: 40px;
        width: 100%;
    }
    form {
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-around;
    }

    .form-wrapper {
        width: 90%;
    }

    .inputs-wrapper {
        width: 50%;
    }

    input {
        width: 95%;
    }

    input:last-child {
        margin-bottom: 0px;
    }

    textarea {
        min-width: 50%;
        max-width: 50%;
    }

    .btn-wrapper {
        width: 50%;
    }

    form button {
        width: 30%;
    
    }
}


/* social links */ 

.social-links-container {
    text-align: center;
    margin-top: 100px;
}
.social-links-container__links {
    display: flex;
    justify-content: center;
}
.social-links-container__link-container {
    background-color: white;
    padding: 10px;
    margin-right: 10px;
    border-radius: 8px;
    box-shadow: 0px 11px 30px -13px rgba(0,0,0,0.75);
    -webkit-box-shadow: 0px 11px 30px -13px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 11px 30px -13px rgba(0,0,0,0.75);
    transition: ease-in-out .2s;
}

.social-links-container__link-container:hover {
    transform: translateY(-10px);
}

.social-links-container__links i {
    font-size: 30px;
    color: var(--theme-color);
}

@media(min-width: 700px) {
    .social-links-container {
        width: 50%;
        margin-top: 30px;
    }
}





/* footer */
footer {
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--background-color);
}

